packages/go/include/xberg.h


typedef struct XBERGChunkClassificationConfig XBERGChunkClassificationConfig;
typedef struct XBERGDoctorCheck XBERGDoctorCheck;
typedef struct XBERGDoctorReport XBERGDoctorReport;
typedef struct XBERGDocumentStructure XBERGDocumentStructure;
typedef struct XBERGExtractInput XBERGExtractInput;
typedef struct XBERGExtractedDocument XBERGExtractedDocument;
typedef struct XBERGExtractionConfig XBERGExtractionConfig;
typedef struct XBERGExtractionResult XBERGExtractionResult;
typedef struct XBERGFootnoteConfig XBERGFootnoteConfig;
typedef struct XBERGHeuristicsConfig XBERGHeuristicsConfig;
typedef struct XBERGLateInteractionMatch XBERGLateInteractionMatch;
typedef struct XBERGLlmConfig XBERGLlmConfig;
typedef struct XBERGMapResult XBERGMapResult;
typedef struct XBERGMetaSchema XBERGMetaSchema;
typedef struct XBERGMetadata XBERGMetadata;
typedef struct XBERGMultiVectorEmbedding XBERGMultiVectorEmbedding;
typedef struct XBERGPaddleOcrConfig XBERGPaddleOcrConfig;
typedef struct XBERGPageRange XBERGPageRange;
typedef struct XBERGPageSignals XBERGPageSignals;
typedef struct XBERGPreset XBERGPreset;
typedef struct XBERGPresetSummary XBERGPresetSummary;
typedef struct XBERGProcessingWarning XBERGProcessingWarning;
typedef struct XBERGRedactionConfig XBERGRedactionConfig;
typedef struct XBERGRegistry XBERGRegistry;
typedef struct XBERGServerConfig XBERGServerConfig;
typedef struct XBERGTokenCounter XBERGTokenCounter;
typedef struct XBERGUrlExtractionConfig XBERGUrlExtractionConfig;
XBERGChunkClassificationConfig *xberg_chunk_classification_config_from_json(const char *json);
void xberg_chunk_classification_config_free(XBERGChunkClassificationConfig *ptr);
XBERGExtractionConfig *xberg_extraction_config_from_json(const char *json);
char *xberg_extraction_config_to_json(const XBERGExtractionConfig *ptr);
void xberg_extraction_config_free(XBERGExtractionConfig *ptr);
XBERGExtractInput *xberg_extract_input_from_json(const char *json);
char *xberg_extract_input_to_json(const XBERGExtractInput *ptr);
void xberg_extract_input_free(XBERGExtractInput *ptr);
char *xberg_extraction_result_to_json(const XBERGExtractionResult *ptr);
void xberg_extraction_result_free(XBERGExtractionResult *ptr);
XBERGUrlExtractionConfig *xberg_url_extraction_config_from_json(const char *json);
void xberg_url_extraction_config_free(XBERGUrlExtractionConfig *ptr);
XBERGLlmConfig *xberg_llm_config_from_json(const char *json);
char *xberg_llm_config_to_json(const XBERGLlmConfig *ptr);
void xberg_llm_config_free(XBERGLlmConfig *ptr);
XBERGRedactionConfig *xberg_redaction_config_from_json(const char *json);
void xberg_redaction_config_free(XBERGRedactionConfig *ptr);
XBERGServerConfig *xberg_server_config_from_json(const char *json);
void xberg_server_config_free(XBERGServerConfig *ptr);
void xberg_token_counter_free(XBERGTokenCounter *ptr);
XBERGFootnoteConfig *xberg_footnote_config_from_json(const char *json);
char *xberg_footnote_config_to_json(const XBERGFootnoteConfig *ptr);
void xberg_footnote_config_free(XBERGFootnoteConfig *ptr);
XBERGDocumentStructure *xberg_document_structure_from_json(const char *json);
char *xberg_document_structure_to_json(const XBERGDocumentStructure *ptr);
void xberg_document_structure_free(XBERGDocumentStructure *ptr);
XBERGExtractedDocument *xberg_extracted_document_from_json(const char *json);
void xberg_extracted_document_free(XBERGExtractedDocument *ptr);
char *xberg_processing_warning_to_json(const XBERGProcessingWarning *ptr);
XBERGMetadata *xberg_metadata_from_json(const char *json);
char *xberg_metadata_to_json(const XBERGMetadata *ptr);
void xberg_metadata_free(XBERGMetadata *ptr);
XBERGMultiVectorEmbedding *xberg_multi_vector_embedding_from_json(const char *json);
char *xberg_multi_vector_embedding_to_json(const XBERGMultiVectorEmbedding *ptr);
void xberg_multi_vector_embedding_free(XBERGMultiVectorEmbedding *ptr);
char *xberg_late_interaction_match_to_json(const XBERGLateInteractionMatch *ptr);
void xberg_late_interaction_match_free(XBERGLateInteractionMatch *ptr);
XBERGHeuristicsConfig *xberg_heuristics_config_from_json(const char *json);
char *xberg_heuristics_config_to_json(const XBERGHeuristicsConfig *ptr);
void xberg_heuristics_config_free(XBERGHeuristicsConfig *ptr);
XBERGPageRange *xberg_page_range_from_json(const char *json);
char *xberg_page_range_to_json(const XBERGPageRange *ptr);
void xberg_page_range_free(XBERGPageRange *ptr);
char *xberg_page_signals_to_json(const XBERGPageSignals *ptr);
void xberg_page_signals_free(XBERGPageSignals *ptr);
void xberg_meta_schema_free(XBERGMetaSchema *ptr);
void xberg_registry_free(XBERGRegistry *ptr);
char *xberg_preset_to_json(const XBERGPreset *ptr);
void xberg_preset_free(XBERGPreset *ptr);
char *xberg_preset_summary_to_json(const XBERGPresetSummary *ptr);
void xberg_preset_summary_free(XBERGPresetSummary *ptr);
char *xberg_doctor_check_to_json(const XBERGDoctorCheck *ptr);
void xberg_doctor_check_free(XBERGDoctorCheck *ptr);
XBERGDoctorReport *xberg_doctor_report_from_json(const char *json);
char *xberg_doctor_report_to_json(const XBERGDoctorReport *ptr);
void xberg_doctor_report_free(XBERGDoctorReport *ptr);
XBERGPaddleOcrConfig *xberg_paddle_ocr_config_from_json(const char *json);
char *xberg_paddle_ocr_config_to_json(const XBERGPaddleOcrConfig *ptr);
void xberg_paddle_ocr_config_free(XBERGPaddleOcrConfig *ptr);
char *xberg_map_result_to_json(const XBERGMapResult *ptr);
void xberg_map_result_free(XBERGMapResult *ptr);