packages/csharp/src/Xberg/NativeMethods.cs

// This file is auto-generated by alef. DO NOT EDIT.
#nullable enable

using System;
using System.Runtime.InteropServices;

namespace Xberg;

internal static partial class NativeMethods
{
    private const string LibName = "xberg_ffi";

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_meta_schema_free")]
    internal static extern void MetaSchemaFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_registry_free")]
    internal static extern void RegistryFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_token_counter_free")]
    internal static extern void TokenCounterFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_chunk_classification_config_from_json")]
    internal static extern IntPtr ChunkClassificationConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_chunk_classification_config_free")]
    internal static extern void ChunkClassificationConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_doctor_report_from_json")]
    internal static extern IntPtr DoctorReportFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_doctor_report_free")]
    internal static extern void DoctorReportFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_document_structure_from_json")]
    internal static extern IntPtr DocumentStructureFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_document_structure_free")]
    internal static extern void DocumentStructureFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extract_input_from_json")]
    internal static extern IntPtr ExtractInputFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extract_input_free")]
    internal static extern void ExtractInputFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extracted_document_from_json")]
    internal static extern IntPtr ExtractedDocumentFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extracted_document_free")]
    internal static extern void ExtractedDocumentFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_config_from_json")]
    internal static extern IntPtr ExtractionConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_config_free")]
    internal static extern void ExtractionConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_footnote_config_from_json")]
    internal static extern IntPtr FootnoteConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_footnote_config_free")]
    internal static extern void FootnoteConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_heuristics_config_from_json")]
    internal static extern IntPtr HeuristicsConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_heuristics_config_free")]
    internal static extern void HeuristicsConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_llm_config_from_json")]
    internal static extern IntPtr LlmConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_llm_config_free")]
    internal static extern void LlmConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_metadata_from_json")]
    internal static extern IntPtr MetadataFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_metadata_free")]
    internal static extern void MetadataFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_multi_vector_embedding_from_json")]
    internal static extern IntPtr MultiVectorEmbeddingFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_multi_vector_embedding_free")]
    internal static extern void MultiVectorEmbeddingFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_from_json")]
    internal static extern IntPtr PaddleOcrConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_free")]
    internal static extern void PaddleOcrConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_range_from_json")]
    internal static extern IntPtr PageRangeFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_range_free")]
    internal static extern void PageRangeFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_config_from_json")]
    internal static extern IntPtr RedactionConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_config_free")]
    internal static extern void RedactionConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_from_json")]
    internal static extern IntPtr ServerConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_free")]
    internal static extern void ServerConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_url_extraction_config_from_json")]
    internal static extern IntPtr UrlExtractionConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_url_extraction_config_free")]
    internal static extern void UrlExtractionConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_doctor_check_to_json")]
    internal static extern IntPtr DoctorCheckToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_doctor_check_free")]
    internal static extern void DoctorCheckFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_doctor_report_to_json")]
    internal static extern IntPtr DoctorReportToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_document_structure_to_json")]
    internal static extern IntPtr DocumentStructureToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extract_input_to_json")]
    internal static extern IntPtr ExtractInputToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_config_to_json")]
    internal static extern IntPtr ExtractionConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_result_to_json")]
    internal static extern IntPtr ExtractionResultToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_result_free")]
    internal static extern void ExtractionResultFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_footnote_config_to_json")]
    internal static extern IntPtr FootnoteConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_heuristics_config_to_json")]
    internal static extern IntPtr HeuristicsConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_late_interaction_match_to_json")]
    internal static extern IntPtr LateInteractionMatchToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_late_interaction_match_free")]
    internal static extern void LateInteractionMatchFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_llm_config_to_json")]
    internal static extern IntPtr LlmConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_map_result_to_json")]
    internal static extern IntPtr MapResultToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_map_result_free")]
    internal static extern void MapResultFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_metadata_to_json")]
    internal static extern IntPtr MetadataToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_multi_vector_embedding_to_json")]
    internal static extern IntPtr MultiVectorEmbeddingToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_to_json")]
    internal static extern IntPtr PaddleOcrConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_range_to_json")]
    internal static extern IntPtr PageRangeToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_signals_to_json")]
    internal static extern IntPtr PageSignalsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_signals_free")]
    internal static extern void PageSignalsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_preset_to_json")]
    internal static extern IntPtr PresetToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_preset_free")]
    internal static extern void PresetFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_preset_summary_to_json")]
    internal static extern IntPtr PresetSummaryToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_preset_summary_free")]
    internal static extern void PresetSummaryFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_processing_warning_to_json")]
    internal static extern IntPtr ProcessingWarningToJson(IntPtr ptr);
